using StudyCafuRollABall.Domain.Structure;

namespace StudyCafuRollABall.Domain.UseCase
{
    public interface IRenderPickUpPresenter
    {
        void Render(IRenderPickUpStructure structure);
    }
}